Today s work done here new api changes , email & UI

--- a/src/app/dashboard/epp/epp.component.html
+++ b/src/app/dashboard/epp/epp.component.html
@@ -19,7 +19,7 @@
             <ul class="details">
               <li>
                 <label>Merchant Name:</label>
-                <span>{{merchanName}}</span>
+                <span>{{merchantName}}</span>
               </li>
               <li>
                 <label>
