--- a/src/app/dashboard/header/header.component.html
+++ b/src/app/dashboard/header/header.component.html
@@ -10,19 +10,24 @@
     <div class="col-5 d-md-block d-none logoWrap   ">
       <img class="" src="assets/img/firstdata_logo.svg">
     </div>
-    <div class="fd-dd-mob text-center "> 
+    <div class="fd-dd-mob text-center ">
       <div class="dropdown d-inline-block d-md-none d-sm-block ">
-        <button  class="btn   dropdown-toggle btn-outline-primary" type="button"
+        <button class="btn   dropdown-toggle btn-outline-primary" type="button"
                 id="dropdownMenuButton"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           -Select Product-
         </button>
+        <div class="tt-outer-wrap mobdrop">
+          <div class="tt-wrap"><span id="tp3" placement="bottom" style="display: none;">Coming Soon</span></div>
+
+          <div class="tt-wrap"><span id="tp4" placement="bottom" style="display: none;">Coming Soon</span></div>
+
+        </div>
+
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 
           <button id="trigger3" class="dropdown-item">Clover Capital</button>
-          <div class=""></div><span id="tp3" placement="bottom" style="display: none;">Coming Soon</span>
-          <button id="trigger4" class="dropdown-item">Advanced Same Day Funding </button>
-          <div class=""></div><span id="tp4" placement="bottom" style="display: none;">Coming Soon</span>
+          <button id="trigger4" class="dropdown-item">Advanced Same Day Funding</button>
         </div>
       </div>
 
