--- a/src/app/auth/sign-up/signup-stat/signup-stat.component.html
+++ b/src/app/auth/sign-up/signup-stat/signup-stat.component.html
@@ -1,8 +1,6 @@
 <div class="txtInnerWrap  ">
-  <h1 class="text-center">{{heading}}</h1>
-  <br>
-  <p class="text-center" innerHTML="{{description}}"></p>
-  <br>
-  <br>
-  <h1 class="text-center" *ngIf="locked">877-257-2094</h1>
+  <h1>{{heading}}</h1>
+  <p innerHTML="{{description}}"></p>
+  <h1 class="clrFix" *ngIf="locked">877-257-2094</h1>
+
 </div>
