--- a/src/app/auth/sign-up/signup-form/signup-form.component.html
+++ b/src/app/auth/sign-up/signup-form/signup-form.component.html
@@ -85,7 +85,7 @@
         <form #signUpForm="ngForm" (ngSubmit)="signUpUser(signUpForm)">
 
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input
               type="number"
               class=" form-control"
@@ -98,10 +98,29 @@
               (paste)="onInputKeyUp($event)"
             >
             <div class="fd-error" (click)="errorResponse.incorrectRefKey = false" *ngIf="errorResponse.incorrectRefKey">Incorrect Reference Key!</div>
+          </div> -->
+          <div class="form-group">
+            <input
+              type="number"
+              class=" form-control"
+              placeholder="Reference Key"
+              name="referenceKey"
+              ngModel
+              required
+              #refrenceNumber="ngModel"
+              (keypress)="onInputKeyUp($event)"
+              (paste)="onInputKeyUp($event)"              
+              >
+            
+            <div 
+            class="fd-error" 
+            (click)="errorResponse.incorrectRefKey =false"        
+            *ngIf="errorResponse.incorrectRefKey">
+          Incorrect Reference Key!</div>
           </div>
 
 
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input
               type="text"
               class="form-control "
@@ -113,8 +132,24 @@
               (keyup)="onInputKeyUp($event)"
             >
             <div class="fd-error"  (click)="errorResponse.incorrectLeaseNo = false" *ngIf="errorResponse.incorrectLeaseNo">Incorrect Lease Number!</div>
+          </div> -->
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control "
+              placeholder="Lease Number"        
+              name="leaseNumber"           
+              #leaseNumber="ngModel"              
+              ngModel        
+              required
+              (keyup)="onInputKeyUp($event)"
+              >
+            <div class="fd-error"              
+            (click)="errorResponse.incorrectLeaseNo = false" 
+            *ngIf="errorResponse.incorrectLeaseNo"
+            >Incorrect Lease Number!</div>
           </div>
-
+<!-- 
           <div class="form-group">
             <input
               type="text"
@@ -126,6 +161,22 @@
               #merchantDBA="ngModel"
             >
             <div class="fd-error"  (click)="errorResponse.incorrectMerchant = false" *ngIf="errorResponse.incorrectMerchant" >Incorrect Merchant DBA!</div>
+
+          </div> -->
+          <div class="form-group">
+            <input
+              type="text"
+              class="form-control "
+              placeholder="Merchant DBA"
+              name = "merchantDBA"      
+              ngModel         
+              required
+              #merchantDBA="ngModel"
+              >
+            <div class="fd-error"         
+            (click)="errorResponse.incorrectMerchant = false"
+            *ngIf="errorResponse.incorrectMerchant"
+            >Incorrect Merchant DBA!</div>
 
           </div>
           <!-- Recaptch -->
