--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="col-12 db-inner-wrap   ">
-  <breadcrumb></breadcrumb>
+  <!-- <breadcrumb></breadcrumb> -->
+  <div class="db-bread-wrap">
+    <ol class="breadcrumb  w-100">
+        <li class="breadcrumb-item">urLease</li>
+        <li class="breadcrumb-item">Dashboard</li>
+        <li class="breadcrumb-item active">{{ breadcrumb }}</li>
+    </ol>
+  </div>
   <lease-block></lease-block>
   <lease-detail></lease-detail>
   <lease-tabs></lease-tabs>
